--- a/main.html
+++ b/main.html
@@ -8,6 +8,41 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<form method="post">
+		<label for="name">Name</label>
+		<input type="text" id="name" placeholder="Name" required>
+		<br>
+		<label for="email">Email</label>
+		<input type="email" id="email" placeholder="Email" required>
+		<br>
+		Gender: <label for="gender_m">Male</label>
+		<input type="radio" id="gender_m" name="gender" required> 
+		<label for="gender_f">Female</label>
+		<input type="radio" id="gender_f" name="gender" required> 
+		<br>
+		<label for="cars">Car Brands</label>
+		<select for="car" id="cars" placeholder="--Please choose an option--" required>
+			<option>BMW</option>
+			<option>Audi</option>
+			<option>Tata</option>
+		</select>
+		<br>
+		
+		<label for="age">Age</label>
+		<input type="number" id="age" placeholder="Age" required>
+		<br>
+		<label for="dob">DOB</label>
+		<input type="date" id="dob" required>
+		<br>
+		<label for="tel">Phone Number</label>
+		<input type="tel" id="tel" placeholder="xxx-xxx-xxxx" required>
+		<br>
+		<label for="password">Password</label>
+		<input type="password" id="password" placeholder="Password" required>
+		<br>
+		<label for="tos">I agree to the TOS</label>
+		<input type="checkbox" id="tos"  required>
+		
     <script type="text/javascript" src="./script.js">
 </script>
 
