--- a/main.html
+++ b/main.html
@@ -42,8 +42,8 @@
 		<br>
 		<label for="tos">I agree to the TOS</label>
 		<input type="checkbox" id="tos"  required>
-		<label for="submit"></label>
-		<input type="submit" id="submit">
+	
+		<input type="submit">
     <script type="text/javascript" src="./script.js">
 </script>
 
