--- a/main.html
+++ b/main.html
@@ -42,8 +42,7 @@
 		<br>
 		<label for="tos">I agree to the TOS</label>
 		<input type="checkbox" id="tos"  required>
-	
-		<input type="submit">
+		<button type="submit">
     <script type="text/javascript" src="./script.js">
 </script>
 
